k8s/apps/frontend/production/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kubernetes.azure.com/scalesetpriority: spot
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      containers:
        - name: frontend
          image: acr2poiclyh4krxy.azurecr.io/expensy-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
  strategy:
    canary:
      # Canary service receives the percentage traffic split
      canaryService: frontend-canary
      stableService: frontend
      steps:
        - setWeight: 20
        - pause: {duration: 5m}
#        - analysis:
##           templates:
#              - templateName: canary-analysis
        - setWeight: 60
        - pause: {duration: 5m}
#        - analysis:
#            templates:
#              - templateName: canary-analysis
        - setWeight: 100
