k8s/apps/frontend/production/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: production
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
